--- a/frontend/src/styles/components/layout/Header.css
+++ b/frontend/src/styles/components/layout/Header.css
@@ -1,5 +1,9 @@
 header {
     background-color: #2e64a1;
+    display: flex;
+    
+}
+header .holder {
     padding: 16px 0;
     text-align: center;
 }
@@ -15,8 +19,23 @@ header h1 {
     margin-left: 10px;
 }
 
+header a {
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    margin: 10px;
+}
+
 @media(max-width: 767px) {
-   header h1 {
+   header {
+    display: block;
+   }
+    header h1 {
     font-size: 35px;
+    padding: 15px;
    } 
+
+   header a {
+    font-size: 0;
+   }
 }
